--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
@@ -25,6 +24,7 @@
             android:name=".Menu"
             android:theme="@style/myTheme"></activity>
         <activity android:name=".Podrobno_o_tovare"></activity>
+        <activity android:name=".List_tovarov"></activity>
     </application>
 
 </manifest>
