--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,10 @@ android {
     kotlin { experimental { coroutines 'enable' } }
 }
 
+repositories {
+    maven { url "https://jitpack.io" }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
@@ -45,5 +49,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.makeramen:roundedimageview:2.2.1'
     implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.simplecityapps:recyclerview-fastscroll:1.0.17'
 
 }
