--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".Main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,6 +25,7 @@
             android:theme="@style/myTheme"></activity>
         <activity android:name=".Podrobno_o_tovare"></activity>
         <activity android:name=".List_tovarov"></activity>
+        <activity android:name=".Fonts_vibor"></activity>
     </application>
 
 </manifest>
