--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "dmitriy.deomin.cit_mich"
+        applicationId "dmitriy.deomin.citmich"
         minSdkVersion 15
         targetSdkVersion 19
         versionCode 4
